--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ install:
  - "mvn -N io.takari:maven:wrapper -Dmaven=${MAVEN_VERSION}"
 
 script:
- - mvn test -B clean install sonar:sonar -Pcoverage -Dsonar.projectKey=dogadoption
+# - mvn test -B clean install sonar:sonar -Pcoverage -Dsonar.projectKey=dogadoption
+ - mvn clean install sonar:sonar -Pcoverage -Dsonar.projectKey=BeauTaapken_DogAdoptionAPI
  - docker build -t docker.io/$DOCKER_NAME/dogadoption-rest:latest .
 
 after_success:
